--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   cloud_firestore: ^4.14.0
   flutter_map: ^6.0.0
   latlong2: ^0.9.0
+  bloc: ^8.0.0
+  flutter_bloc: ^8.1.6
+  get_it: ^7.6.7
 
 
   # The following adds the Cupertino Icons font to your application.
